apps/database/mariadb/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb-sys
  labels:
    name: mariadb-sys
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: database
