apps/database/mariadb/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-in
  namespace: mariadb-sys

spec:
  entryPoints:
    - mysql

  routes:
  - match: HostSNI(`*`)
    services:
    - name: mariadb-port
      port: 3306
